# Raylib-Game

./: CMakeLists.txt  README.md
include/: Animation.hpp  AssetManager.hpp  AttackCommand.hpp  Coin.hpp  Enemy.hpp  GameConfig.hpp  GameData.hpp  GameOverState.hpp  GameState.hpp  HUD.hpp  InputManager.hpp  JumpCommand.hpp  MenuState.hpp  MoveLeftCommand.hpp  MoveRightCommand.hpp  PauseState.hpp  Player.hpp  PlayerCommand.hpp  SoundManager.hpp  StopMovingCommand.hpp  Trophy.hpp  Weapon.hpp
src/: Animation.cpp  AssetManager.cpp  AttackCommand.cpp  Coin.cpp  Enemy.cpp  GameOverState.cpp  GameState.cpp  HUD.cpp  InputManager.cpp  MenuState.cpp  PauseState.cpp  Player.cpp  SoundManager.cpp  StopMovingCommand.cpp  Trophy.cpp  Weapon.cpp  main.cpp
